--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
     "express-validator": "^7.2.1",
-    "firebase-admin": "^13.2.0"
+    "firebase-admin": "^13.2.0",
+    "speakeasy": "^2.0.0"
   }
 }
