--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-validator": "^7.2.1",
     "firebase-admin": "^13.2.0",
     "jsonwebtoken": "^9.0.2",
+    "node-fetch": "^3.3.2",
     "qrcode": "^1.5.4",
     "speakeasy": "^2.0.0"
   }
